# tokio-prompt-orchestrator

./: .bench_baseline.txt  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_PROMPT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ENHANCEMENT_SUMMARY.md  HIGH_IMPACT.md  LICENSE  METRICS.md  MODEL_WORKERS.md  PHASE2_COMPLETE.md  PHASE34_COMPLETE.md  PHASE3_COMPLETE.md  PROJECT_OVERVIEW.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  UPGRADE.md  WEB_API.md  WHATS_NEW.md  WORKERS.md  claude_desktop_config.json  deny.toml  docker-compose.yml  grafana-dashboard.json  index.html  metrics.rs  mutants.toml  pipeline.example.toml  prometheus.yml  worker.rs
.cargo/: config.toml
.claude/: settings.local.json
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  ci.yml  docs.yml  mutation.yml  publish.yml
benches/: enhanced.rs  helix.rs  mcp_bench.py  mcp_benchmark_results.md  pipeline.rs  workers.rs
dev/bench/: data.js
docs/: ARCHITECTURE.md  circuit_breaker_behavior.md  configuration.md  cost_tracking_validation.md  distributed.md  getting-started.md  primitives.md
examples/: anthropic_example.rs  anthropic_worker.rs  circuit_breaker_demo.rs  config_hot_reload.rs  custom_worker.rs  dedup_demo.rs  distributed_redis.rs  dlq_inspection.rs  high_impact_demo.rs  llama_cpp_example.rs  llamacpp_worker.rs  mcp_claude_desktop.md  metrics_demo.rs  multi_worker.rs  openai_example.rs  openai_worker.rs  priority_requests.rs  rest_api.rs  sse_stream.rs  vllm_example.rs  vllm_worker.rs  web_api_demo.rs  websocket_api.rs
scripts/: bench_all.sh  check_bench_regression.sh  coverage.sh  gen_files.py  gen_schema.sh  mcp_dedup_test.sh  panic_scan.sh  pre_commit.sh  ratio_check.sh
src/: ab_test.rs  ab_testing.rs  adaptive_pool.rs  adaptive_timeout.rs  admission_control.rs  audit.rs  cache.rs  cache_warmer.rs  cascade.rs  chain_of_thought.rs  circuit_breaker.rs  compression.rs  context_compression.rs  context_mgr.rs  conversation.rs  conversation_analyzer.rs  conversation_graph.rs  conversation_state.rs  cost_estimator.rs  cost_optimizer.rs  enhanced.rs  eval_harness.rs  experiment_runner.rs  failover.rs  feedback_loop.rs  hot_config.rs  intent_classifier.rs  job_scheduler.rs  lib.rs  load_balancer.rs  main.rs  metrics.rs  metrics_server.rs  model_fallback.rs  model_registry.rs  model_selector.rs  multi_modal.rs  multi_pipeline.rs  observability.rs  output_cache.rs  (+40 more)
src/config/: loader.rs  mod.rs  validation.rs  watcher.rs
src/coordination/: config.rs  mod.rs  monitor.rs  queue.rs  spawner.rs  task.rs  worker.rs
src/distributed/: cluster.rs  config.rs  leader.rs  mod.rs  nats.rs  redis_dedup.rs
src/enhanced/: adaptive_timeout.rs  bulkhead.rs  cache.rs  circuit_breaker.rs  dedup.rs  dlq_replay.rs  priority.rs  rate_limit.rs  retry.rs  semantic_dedup.rs  smart_batch.rs  tournament.rs
src/evolution/: brain.rs  mod.rs  plugin.rs  search.rs  transfer.rs
src/helix/: config.rs  distributed.rs  metrics.rs  mod.rs  router.rs  simulator.rs  strategies.rs  types.rs  web.rs
src/intelligence/: autoscale.rs  bridge.rs  feedback.rs  lexical_dedup.rs  mod.rs  prompt_opt.rs  quality.rs  router.rs  semantic_dedup.rs
src/routing/: arbitrage.rs  cascade.rs  config.rs  cost_tracker.rs  health.rs  mod.rs  pool_sizer.rs  router.rs  scorer.rs  semantic.rs
src/self_modify/: deployment.rs  discover.rs  docs.rs  gate.rs  memory.rs  mod.rs  task_gen.rs
src/self_tune/: actuator.rs  anomaly.rs  controller.rs  cost.rs  experiment.rs  helix_config_pusher.rs  helix_feedback.rs  helix_probe.rs  mod.rs  snapshot.rs  telemetry_bus.rs  wiring.rs
src/session/: budget.rs  context.rs  mod.rs
src/tui/: app.rs  events.rs  metrics.rs  mod.rs  ui.rs
src/tui/widgets/: channels.rs  circuit.rs  cost.rs  dedup.rs  health.rs  log.rs  mod.rs  pipeline.rs  sparkline.rs
src/webhooks/: mod.rs
static/: index.html
target-agent/: .rustc_info.json
target-agent1/: .rustc_info.json
target-agent1/release/.fingerprint/async-nats-8a6c39fcef0fcc48/: lib-async_nats  lib-async_nats.json
target-agent1/release/.fingerprint/async-trait-a66ba6cbed2626e5/: lib-async_trait
target-agent1/release/.fingerprint/atomic-waker-e0002318e228c01c/: lib-atomic_waker  lib-atomic_waker.json
target-agent1/release/.fingerprint/base64-cf9c83b0418d5424/: lib-base64.json
target-agent1/release/.fingerprint/base64ct-71e1bb995a59ffaa/: lib-base64ct
target-agent1/release/.fingerprint/bitflags-2ec3292b85d3dae3/: lib-bitflags
target-agent1/release/.fingerprint/bytes-95bd5d79a5b8174c/: lib-bytes
target-agent1/release/.fingerprint/cc-986c4e8a756e0913/: lib-cc.json
target-agent1/release/.fingerprint/cfg-if-f0e9da8d87d56d19/: lib-cfg_if.json
target-agent1/release/.fingerprint/const-oid-c099fd74495363e3/: lib-const_oid  lib-const_oid.json
target-agent1/release/.fingerprint/cpufeatures-cc2a3e7b24b3ff0e/: lib-cpufeatures.json
target-agent1/release/.fingerprint/crossbeam-utils-4fc6c8fcf12b18e1/: lib-crossbeam_utils  lib-crossbeam_utils.json
target-agent1/release/.fingerprint/dashmap-f5f5d1be3ba1cf59/: lib-dashmap  (+1 more)
target-claude/: .future-incompat-report.json  .rustc_info.json
target-t1/: .rustc_info.json
tests/: chaos_tests.rs  circuit_breaker_50req.rs  circuit_breaker_state_tests.rs  config_hot_reload_load_tests.rs  coordination_integration.rs  coordination_tests.rs  cost_tracking_validation.rs  deadline_integration_tests.rs  dedup_property_tests.rs  dedup_validation.md  dedup_validation.rs  distributed_integration.rs  enhanced_hardening_tests.rs  helix_probe_integration.rs  mcp_tests.rs  observability_tests.rs  property_tests.rs  self_improve_integration.rs  tier_integration_tests.rs  tui_live_mode_tests.rs  tui_tests.rs  web_api_cors_tests.rs  web_api_tests.rs  web_api_tracker_tests.rs  worker_extra_tests.rs
tests/mcp/: mod.rs  tool_batch.rs  tool_configure.rs  tool_infer.rs  tool_status.rs
tests/tui/: app_state.rs  circuit_cycling.rs  log_rotation.rs  mock_data.rs  mod.rs  widget_tests.rs
(+552 files in other folders)
