[package]
name = "tokio-prompt-orchestrator"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[dependencies]
# Core
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
thiserror = "1.0"
async-trait = "0.1"

# Utils
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "fast-rng"] }
rand = "0.8"

# HTTP + JSON
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config (Phase 2 — declarative pipeline configuration)
# toml: TOML parsing for pipeline config files
toml = "0.8"
# schemars: JSON Schema generation for IDE autocomplete on config files
schemars = "0.8"
# notify: filesystem watching for config hot-reload
notify = "6.0"

# Metrics
prometheus = "0.13"

# Web (feature-gated)
axum = { version = "0.7", optional = true, features = ["ws", "macros"] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", optional = true, features = ["trace", "cors", "fs"] }
tokio-stream = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }

# TUI dashboard — ratatui terminal rendering + crossterm backend
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# MCP server — expose pipeline as Claude Desktop tools via Model Context Protocol
rmcp = { version = "0.16", features = ["server", "transport-io"], optional = true }

# Enhanced features (Phase 4)
redis = { version = "0.25", optional = true, features = ["tokio-comp", "connection-manager"] }
dashmap = "5.5"
governor = { version = "0.6", optional = true }
nonzero_ext = { version = "0.3", optional = true }

# Dashboard — async SSE stream generation
async-stream = { version = "0.3", optional = true }

# Distributed clustering (Phase 5) — NATS for pub/sub messaging, Redis for cross-node dedup + leader election
async-nats = { version = "0.38", optional = true }

[features]
default = []
metrics-server = ["axum", "tower", "tower-http"]
web-api = ["axum", "tower", "tower-http", "tokio-stream", "futures"]
caching = ["dep:redis"]
rate-limiting = ["governor", "nonzero_ext"]
tui = ["ratatui", "crossterm"]
mcp = ["dep:rmcp"]
dashboard = ["axum", "tower", "tower-http", "tokio-stream", "dep:async-stream"]
distributed = ["dep:async-nats", "dep:redis"]
full = ["web-api", "metrics-server", "caching", "rate-limiting", "tui", "dashboard"]

[dev-dependencies]
tokio-test = "0.4"
# wiremock: HTTP mock server for worker integration tests
wiremock = "0.6"
# proptest: property-based testing for algorithmic correctness guarantees
proptest = "1.4"
# tracing-test: capture and assert on tracing spans/events in tests
tracing-test = "0.2"
# tempfile: temporary files/dirs for config loading tests
tempfile = "3.10"
# criterion: statistical benchmarking for performance contract enforcement
criterion = { version = "0.5", features = ["async_tokio"] }

[[bin]]
name = "orchestrator-demo"
path = "src/main.rs"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[[bin]]
name = "mcp"
path = "src/bin/mcp.rs"
required-features = ["mcp"]

[[bin]]
name = "dashboard"
path = "src/bin/dashboard.rs"
required-features = ["dashboard"]

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "enhanced"
harness = false

[[bench]]
name = "workers"
harness = false

