[package]
name = "tokio-prompt-orchestrator"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[dependencies]
# Core
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-std", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
thiserror = "1.0"
async-trait = "0.1"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "fast-rng", "serde"] }
rand = "0.8"

# HTTP + JSON
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Web (feature-gated)
axum = { version = "0.7", optional = true, features = ["ws", "macros"] }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true, features = ["trace", "cors"] }
tokio-stream = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }

# Enhanced features
async-nats = "0.35"
notify = "6"
schemars = "0.8"
redis = { version = "0.24", optional = true, features = ["tokio-comp", "connection-manager"] }
dashmap = "5.5"
governor = { version = "0.6", optional = true }
nonzero_ext = { version = "0.3", optional = true }

# Self-tuning dependencies
parking_lot = "0.12"

# Config / task file parsing
toml = "0.8"

# TUI dashboard
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.28", optional = true }

# MCP server
rmcp = { version = "0.16", optional = true, features = ["server", "macros", "transport-io"] }
async-stream = { version = "0.3", optional = true }

[features]
default = []
metrics-server = ["axum", "tower", "tower-http"]
web-api = ["axum", "tower", "tower-http", "tokio-stream", "futures"]
caching = ["redis"]
rate-limiting = ["governor", "nonzero_ext"]
full = ["web-api", "metrics-server", "caching", "rate-limiting"]
self-tune = []
self-modify = ["self-tune"]
intelligence = ["self-tune"]
evolution = ["self-tune", "intelligence"]
self-improving = ["self-tune", "self-modify", "intelligence", "evolution"]
tui = ["ratatui", "crossterm"]
mcp = ["rmcp", "async-stream", "web-api"]
dashboard = ["web-api"]
distributed = ["redis"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
wiremock = "0.6"
tower = { version = "0.4", features = ["util"] }

[[example]]
name = "rest_api"
required-features = ["web-api"]

[[example]]
name = "sse_stream"
required-features = ["web-api"]

[[example]]
name = "websocket_api"
required-features = ["web-api"]

[[example]]
name = "web_api_demo"
required-features = ["web-api"]

[[bin]]
name = "orchestrator-demo"
path = "src/main.rs"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[[bin]]
name = "mcp"
path = "src/bin/mcp.rs"
required-features = ["mcp"]

[[bin]]
name = "coordinator"
path = "src/bin/coordinator.rs"

[[bin]]
name = "dashboard"
path = "src/bin/dashboard.rs"
required-features = ["dashboard"]

[[bin]]
name = "self-improve"
path = "src/bin/self_improve.rs"
required-features = ["self-improving"]
