[package]
name = "tokio-prompt-orchestrator"
version = "1.3.0"
edition = "2021"
rust-version = "1.85"
description = "Multi-core Tokio-native orchestration for LLM inference pipelines: dedup, circuit breakers, backpressure, MCP, and autonomous self-improvement"
documentation = "https://docs.rs/tokio-prompt-orchestrator"
homepage = "https://github.com/Mattbusel/tokio-prompt-orchestrator"
repository = "https://github.com/Mattbusel/tokio-prompt-orchestrator"
license = "MIT"
readme = "README.md"
keywords = ["tokio", "llm", "orchestration", "circuit-breaker", "async"]
categories = ["asynchronous", "network-programming", "web-programming"]
exclude = [".github", "scripts", "assets", "docs", "benches"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[package.metadata.docs.rs]
features = ["full", "tui", "mcp", "self-improving", "distributed"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-std", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
tracing-futures = "0.2"
# OpenTelemetry
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "grpc-tonic", "http-proto", "reqwest-client"] }
opentelemetry-http = "0.27"
tracing-opentelemetry = "0.28"
thiserror = "1.0"
async-trait = "0.1"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "fast-rng", "serde"] }
rand = "0.8"

# HTTP + JSON
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing (used by the replay binary)
clap = { version = "4", features = ["derive", "env"] }

# Metrics
# prometheus 0.13 has RUSTSEC-2024-0437 (protobuf DoS via crafted scrape request).
# Mitigated by: METRICS_API_KEY auth on /metrics endpoint (added 2026-03-19).
# prometheus 0.14 has breaking API changes (see https://github.com/tikv/rust-prometheus/releases).
# Specifically: the `prometheus::proto` module (and protobuf support) was removed in 0.14;
# src/metrics.rs uses `prometheus::proto::MetricFamily` in gather() which must be migrated first.
# Track upgrade in issue #XXX.
# TODO(2026-Q3): migrate prometheus::proto::MetricFamily usages then upgrade to 0.14
prometheus = "0.13"
lazy_static = "1.4"  # used by prometheus crate — do not remove

# Web (feature-gated)
axum = { version = "0.7", optional = true, features = ["ws", "macros"] }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true, features = ["trace", "cors"] }
tokio-stream = { version = "0.1", optional = true }
futures = "0.3"
bytes = "1"
subtle = "2"

# Enhanced features
async-nats = { version = "0.35", optional = true }
notify = "6"
schemars = { version = "0.8", optional = true }
redis = { version = "0.24", optional = true, features = ["tokio-comp", "connection-manager"] }
dashmap = "5.5"
governor = { version = "0.6", optional = true }
nonzero_ext = { version = "0.3", optional = true }

# Optional core affinity pinning
core_affinity = { version = "0.8", optional = true }

# Regex engine for RegexReplaceStage in pipeline.rs
regex = "1"

# SHA-256 for prompt cache content-addressing
sha2 = "0.10"
hex = "0.4"

# Self-tuning dependencies
parking_lot = "0.12"

# Config / task file parsing
toml = "0.8"

# TUI dashboard
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.28", optional = true }

# MCP server
rmcp = { version = "0.16", optional = true, features = ["server", "macros", "transport-io"] }
async-stream = "0.3"

[features]
# No features are enabled by default. The library compiles and runs without
# any optional features, providing only the core pipeline and worker types.
default = []

# metrics-server: Prometheus-compatible /metrics HTTP scrape endpoint via axum.
# Use with a Prometheus or VictoriaMetrics scraper. Port configurable in ServerConfig.
metrics-server = ["axum", "tower", "tower-http"]

# web-api: Full HTTP server with REST endpoints, SSE streaming, and WebSocket.
# Required by: mcp, dashboard.
web-api = ["axum", "tower", "tower-http", "tokio-stream"]

# caching: Redis-backed TTL result cache for inference responses.
# Reduces LLM API cost for repeated identical prompts across process restarts.
caching = ["redis"]

# rate-limiting: Token-bucket rate limiter at the pipeline entry point.
# Configurable via RateLimitConfig in pipeline.toml.
rate-limiting = ["governor", "nonzero_ext"]

# full: Convenience flag for single-node full-featured deployments.
# Enables web API, Prometheus metrics, Redis cache, and rate limiting.
full = ["web-api", "metrics-server", "caching", "rate-limiting"]

# Self-improvement tiers. Each tier is additive: self-modify includes self-tune,
# evolution includes self-tune + intelligence.

# self-tune: Closed-loop parameter tuning.
# Enables: PID controllers, TelemetryBus, AnomalyDetector (Z-score + CUSUM),
# SnapshotStore, CostOptimizer. Required by all higher self-improvement tiers.
self-tune = []

# self-modify: Autonomous config generation and validation.
# Enables: MetaTaskGenerator, ValidationGate (cargo test + clippy sandbox),
# AgentMemory. Requires self-tune.
self-modify = ["self-tune"]

# intelligence: Learned routing and autoscaling.
# Enables: LearnedRouter (epsilon-greedy bandit), Autoscaler, FeedbackCollector,
# QualityEstimator, PromptOptimizer, SemanticDedup. Requires self-tune.
intelligence = ["self-tune"]

# evolution: Evolutionary parameter search and A/B experiments.
# Enables: A/B experiment runner, snapshot rollback, transfer learning.
# Requires self-tune + intelligence.
evolution = ["self-tune", "intelligence"]

# self-improving: Meta-feature that enables all self-improvement subsystems.
# Equivalent to self-tune + self-modify + intelligence + evolution.
# Used by the self-improve binary and the SelfImprovingLoop type.
self-improving = ["self-tune", "self-modify", "intelligence", "evolution"]

# tui: Ratatui terminal dashboard with live pipeline metrics.
# Shows stage queue depths, circuit breaker state, dedup savings, sparklines.
tui = ["ratatui", "crossterm"]

# mcp: Model Context Protocol server.
# Exposes infer, pipeline_status, batch_infer, and configure_pipeline tools
# callable from Claude Desktop and Claude Code. Requires web-api.
mcp = ["rmcp", "web-api"]

# dashboard: Web dashboard UI. Requires web-api.
dashboard = ["web-api"]

# distributed: Multi-node coordination.
# Enables: Redis cross-node deduplication, NATS pub/sub work queues,
# leader election with TTL renewal, session affinity routing.
distributed = ["redis", "async-nats"]

# schema: JSON Schema export for PipelineConfig.
# Used by the gen_schema binary to produce pipeline.schema.json for IDE validation.
schema = ["schemars"]

# core-pinning: Pin pipeline stage tasks to specific CPU cores.
core-pinning = ["core_affinity"]

# zipkin: Export request traces to a Zipkin v2 HTTP endpoint.
# Set ZIPKIN_ENDPOINT=http://localhost:9411 at runtime.
zipkin = []

# datadog: Export request traces to a DataDog Agent (v0.4 trace API).
# Set DD_AGENT_HOST and optionally DD_AGENT_PORT at runtime.
datadog = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
wiremock = "0.6"
tower = { version = "0.4", features = ["util"] }
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
proptest = "1"

[[example]]
name = "rest_api"
required-features = ["web-api"]

[[example]]
name = "sse_stream"
required-features = ["web-api"]

[[example]]
name = "websocket_api"
required-features = ["web-api"]

[[example]]
name = "web_api_demo"
required-features = ["web-api"]

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[[bin]]
name = "replay"
path = "src/bin/replay.rs"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[[bin]]
name = "mcp"
path = "src/bin/mcp.rs"
required-features = ["mcp"]

[[bin]]
name = "coordinator"
path = "src/bin/coordinator.rs"

[[bin]]
name = "dashboard"
path = "src/bin/dashboard.rs"
required-features = ["dashboard"]

[[bin]]
name = "self-improve"
path = "src/bin/self_improve.rs"
required-features = ["self-improving"]

[[bin]]
name = "validate"
path = "src/bin/validate.rs"

[[bin]]
name = "gen_schema"
path = "src/bin/gen_schema.rs"
required-features = ["schema"]

[[bench]]
name = "pipeline"
path = "benches/pipeline.rs"
harness = false

[[bench]]
name = "workers"
path = "benches/workers.rs"
harness = false

[[bench]]
name = "enhanced"
path = "benches/enhanced.rs"
harness = false

